# OsoPanda1

./: .env.example  .gitignore  CHECKLIST_TAMV_MDX4_RDM.md  Makefile  README.md  docker-compose.yml  package.json  pyproject.toml
config/: repos_seed.json
db/: tamv_nexus_schema.sql
docs/: ANUBIS_ANALISIS.md  DOCUMENTACION_CHECKLIST.md  PDOS_CORE.md  UNIFICACION.md
docs/integraciones/: README.md
scripts/: unify_repos.py
src/: index.js
src/api/: dashboard.js
src/config/: env.js
src/db/: db.js  seed.js
src/kernel/: orchestrator.js
src/tamv_digital_nexus/: __init__.py  cli.py  git_ops.py  inventory.py  models.py  orchestrator.py  server.py
tests/: test_inventory.py  test_orchestrator.py  test_server.py
